# rust-mini-example

./: Cargo.toml  README.md  build.ninja
src/: lib.rs  panic_handler.rs
