[package]
name = "mini"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-syscalls.version = "0.3.2"
linux-syscalls.default-features = false
linux-syscalls.features = ["bare"]
